qcrypt/etc/sysconfig/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
# OF controller
-A INPUT -m state --state NEW -m tcp -p tcp --dport 6633 -j ACCEPT
# OF REST API
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8080 -j ACCEPT
# Crypto module channels
-A INPUT -m state --state NEW -m tcp -p tcp --dport 1000 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 1001 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 1002 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 1003 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 1004 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
